# FastPostez

./: .gitignore  CMakeLists.txt  README.md  check_completeness.py  config.json  merge_zbbj.sh  merge_zbbj_data.sh  merge_zbbj_run3.sh  merge_zbby.sh  merge_zbby_run3.sh  run_check.sh  setup.sh  test_config.json  zbbj_bjes_config.json  zbbj_bjes_config_exp.json  zbbj_bjes_run2_config.json  zbbj_bjes_run3_config.json  zbby_bjes_config.json  zbby_bjes_run2_config.json  zbby_bjes_run3_config.json
bjes/: CMakeLists.txt  bjes.cpp  bjes.h  main_bjes.cpp
cfg_exps/: pythia_config.json  zbbj_bjes_config.json  zbbj_bjes_sample_config.json  zbbj_bjes_sherpa_config.json  zbbj_bjes_v2_config.json
core/: CMakeLists.txt  gn2x.h  input_handler.cpp  output_manager.cpp  output_manager.h  weights.cpp
data/: Xbb_lookup_table_ftop0_250pT500yj_21May2025.json  Xbb_lookup_table_prelim_Oct30_2024.json  flatmass_cuts_pt200to500_m40to150.csv  metadata.txt  metadata_zbbx_run3.txt
merge_samples/: merge_zbbj_data.sh
src/: bjes.cpp  bjes.h  config.cpp  config.h  config_bjes.cpp  config_bjes.h  gn2x.cpp  gn2x.h  input_handler.cpp  input_handler.h  main.cpp  main_xbby_calib.cpp  output_manager.cpp  weights.cpp  weights.h  xbby_calib.cpp  xbby_calib.h
utils/: .asetup.save  get_metadata copy.py  get_metadata.py  metadata_mc20.txt  metadata_mc23 copy.txt  metadata_mc23.txt  setup.sh
xbb_calib/: CMakeLists.txt  config.cpp  xbby_calib.cpp
